feat(ui): add webui and swaggerui for visualization
webui: http://localhost/webui
swaggerui: http://localhost/swaggerui
openapi soec: http://localhost/swagger.json
